--- a/JSONPlaceholder/JSONPlaceholder/MainWindow.xaml
+++ b/JSONPlaceholder/JSONPlaceholder/MainWindow.xaml
@@ -8,14 +8,17 @@
     <Grid>
         <StackPanel>
             <TextBlock Text="JSONPlaceholder Posts" FontSize="18" FontWeight="Bold" Margin="10"/>
-            <ListView Name="PostsListView" Height="200" Margin="10">
+            <ListView x:Name="PostsListView">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="ID" Width="50" DisplayMemberBinding="{Binding id}"/>
-                        <GridViewColumn Header="Title" Width="300" DisplayMemberBinding="{Binding title}"/>
+                        <GridViewColumn Header="ID" DisplayMemberBinding="{Binding id}" Width="50"/>
+                        <GridViewColumn Header="Title" DisplayMemberBinding="{Binding title}" Width="200"/>
+                        <GridViewColumn Header="Body" DisplayMemberBinding="{Binding body}" Width="300"/>
                     </GridView>
                 </ListView.View>
             </ListView>
+
+
             <Button Content="Refresh Data" Width="100" Height="30" Click="RefreshData_Click" Margin="10"/>
             <TextBlock Name="StatusText" FontSize="14" Margin="10" Text="Status: Waiting for data..."/>
         </StackPanel>
